Co-authored-by: Jared R <JaredR02@users.noreply.github.com>

--- a/Beam_bending_Python/main.ipynb
+++ b/Beam_bending_Python/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,27 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "rho = 1.225 # kg/m^3\n",
-    "v = 18 # m/s\n",
-    "#Test Commit"
+    "v = 18 # m/s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1de6576c230>]"
+       "[<matplotlib.lines.Line2D at 0x2157a5d70e0>]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -66,16 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1de657e28d0>]"
+       "[<matplotlib.lines.Line2D at 0x2157cd53320>]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -101,11 +100,11 @@
     "for index, row in wing.iterrows():\n",
     "    if row['y_span'] < pin_a: # to left of pin a\n",
     "        moment.append(row['lift']*(row['y_span']-pin_a))\n",
-    "    elif row['y_span'] > pin_a and row['y_span'] < 0: # Between pin a and center\n",
+    "    elif row['y_span'] > pin_a and row['y_span'] < 0: # between pin a and center\n",
     "        moment.append(row['lift']*((row['y_span']-pin_a)))\n",
-    "    elif row['y_span'] > 0 and row['y_span'] < pin_b: # Between center and pin b\n",
+    "    elif row['y_span'] > 0 and row['y_span'] < pin_b: # between center and pin b\n",
     "        moment.append(row['lift']*(pin_b-(row['y_span']))) \n",
-    "    else: #Right of pin b\n",
+    "    else: #to the right of pin b\n",
     "           moment.append(row['lift']*(pin_b-(row['y_span'])))\n",
     "\n",
     "\n",
@@ -116,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1de6da7fe90>]"
+       "[<matplotlib.lines.Line2D at 0x2157cd94830>]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -153,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1de6dec2090>]"
+       "[<matplotlib.lines.Line2D at 0x2157ced3fe0>]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,34 +185,41 @@
     "displacement_scaled = []\n",
     "\n",
     "for x in displacement:\n",
-    "    displacement_scaled.append((x/(E*I))*1000)\n",
+    "    displacement_scaled.append((x/(E*I))*1000)      #displacement in mm\n",
     "\n",
     "plt.plot(wing['y_span'], displacement_scaled,label = 'displacement')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6202898.932589322"
+       "1.9862249040535978"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "moment_max = max(moment, key=abs)           #N*m\n",
+    "moment_max = max(moment, key=abs)               #N*m\n",
     "\n",
-    "stress_max = (moment_max * (d/2)) / I   #Pa\n",
+    "stress_max = ((moment_max*(d_out/2))/I)/10**6   #MPa\n",
     "\n",
     "stress_max"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
